--- a/matching/index.html
+++ b/matching/index.html
@@ -5,11 +5,10 @@
     <meta charset="utf-8">
     <title>Redirecting...</title>
     <link rel="canonical" href="https://bcgsc.github.io/pori/graphkb/matching/">
-    <meta name="robots" content="noindex">
     <script>var anchor=window.location.hash.substr(1);location.href="https://bcgsc.github.io/pori/graphkb/matching/"+(anchor?"#"+anchor:"")</script>
     <meta http-equiv="refresh" content="0; url=https://bcgsc.github.io/pori/graphkb/matching/">
 </head>
 <body>
-Redirecting...
+You're being redirected to a <a href="https://bcgsc.github.io/pori/graphkb/matching/">new destination</a>.
 </body>
 </html>
